--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "lucide-react": "^0.469.0",
     "next": "^15.1.3",
     "next-themes": "^0.4.4",
+    "node-fetch": "^3.3.2",
     "postcss-nesting": "^13.0.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -55,10 +56,11 @@
     "@next/bundle-analyzer": "^15.1.3",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.1.0",
+    "@testing-library/react-hooks": "^8.0.1",
     "@types/google.maps": "^3.58.1",
     "@types/jest": "^29.5.14",
     "@types/node": "^20.17.11",
-    "@types/react": "^19.0.2",
+    "@types/react": "^18.3.18",
     "@types/react-dom": "^19.0.2",
     "@typescript-eslint/eslint-plugin": "^8.19.0",
     "@typescript-eslint/parser": "^8.19.0",
