--- a/package.json
+++ b/package.json
@@ -59,14 +59,14 @@
     "@testing-library/react-hooks": "^8.0.1",
     "@types/google.maps": "^3.58.1",
     "@types/jest": "^29.5.14",
-    "@types/node": "^22.10.5",
-    "@types/react": "^19.0.2",
-    "@types/react-dom": "^19.0.2",
-    "@typescript-eslint/eslint-plugin": "^8.19.0",
-    "@typescript-eslint/parser": "^8.19.0",
+    "@types/node": "^20.10.6",
+    "@types/react": "^18.2.46",
+    "@types/react-dom": "^18.2.18",
+    "@typescript-eslint/eslint-plugin": "^6.17.0",
+    "@typescript-eslint/parser": "^6.17.0",
     "autoprefixer": "^10.4.16",
-    "eslint": "^9.17.0",
-    "eslint-config-next": "^15.1.3",
+    "eslint": "^8.56.0",
+    "eslint-config-next": "^14.0.4",
     "eslint-plugin-react": "^7.37.3",
     "eslint-plugin-react-hooks": "^5.1.0",
     "husky": "^9.1.7",
@@ -79,7 +79,10 @@
     "semver": "^7.6.3",
     "supabase": "^2.2.1",
     "supabase-cli": "^0.0.21",
-    "typescript": "latest"
+    "typescript": "^5.3.3",
+    "@testing-library/react": "^14.1.2",
+    "@testing-library/react-hooks": "^8.0.1",
+    "@testing-library/jest-dom": "^6.1.6"
   },
   "lint-staged": {
     "*.{ts,tsx}": [
