--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "concurrently \"next dev\" \"npm run track:auto\"",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -15,12 +15,24 @@
     "test:coverage": "jest --coverage",
     "clean": "rimraf .next out coverage",
     "validate": "npm run lint && npm run type-check && npm run test",
-    "prepare": "husky install"
+    "prepare": "husky install && chmod +x .husky/pre-commit",
+    "update-docs": "ts-node scripts/update-docs.ts",
+    "update-errors": "ts-node scripts/update-error-log.ts",
+    "track:start": "ts-node scripts/track-troubleshooting.ts start",
+    "track:step": "ts-node scripts/track-troubleshooting.ts step",
+    "track:end": "ts-node scripts/track-troubleshooting.ts end",
+    "track:stats": "ts-node scripts/track-troubleshooting.ts stats",
+    "track:auto": "ts-node scripts/auto-track-troubleshooting.ts",
+    "check": "ts-node scripts/system-check.ts",
+    "check:deps": "ts-node scripts/system-check.ts dependencies-check",
+    "check:types": "ts-node scripts/system-check.ts typescript-config",
+    "check:build": "ts-node scripts/system-check.ts build-performance",
+    "check:quality": "ts-node scripts/system-check.ts code-quality",
+    "check:tests": "ts-node scripts/system-check.ts test-coverage",
+    "check:memory": "ts-node scripts/system-check.ts memory-check",
+    "check:env": "ts-node scripts/system-check.ts env-check"
   },
   "dependencies": {
-    "@babel/generator": "^7.26.3",
-    "@babel/parser": "^7.26.3",
-    "@babel/traverse": "^7.26.4",
     "@heroicons/react": "^2.0.18",
     "@hookform/resolvers": "^3.9.1",
     "@radix-ui/react-dialog": "^1.1.4",
@@ -28,21 +40,23 @@
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-select": "^2.1.4",
     "@radix-ui/react-slot": "^1.1.1",
-    "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/ssr": "^0.5.2",
     "@supabase/supabase-js": "^2.47.10",
+    "chalk": "^4.1.2",
+    "chokidar": "^3.5.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.4",
+    "concurrently": "^8.2.2",
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
     "lucide-react": "^0.469.0",
-    "next": "^15.1.3",
+    "next": "14.0.4",
     "next-themes": "^0.4.4",
     "node-fetch": "^3.3.2",
     "postcss-nesting": "^13.0.1",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-hook-form": "^7.54.2",
     "recharts": "^2.15.0",
     "shadcn-ui": "^0.9.4",
@@ -50,12 +64,14 @@
     "tailwind-merge": "^2.6.0",
     "tailwindcss": "^3.4.17",
     "tailwindcss-animate": "^1.0.7",
+    "ts-node": "^10.9.2",
+    "type-coverage": "^2.27.1",
     "zod": "^3.24.1"
   },
   "devDependencies": {
-    "@next/bundle-analyzer": "^15.1.3",
-    "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.1.0",
+    "@next/bundle-analyzer": "^14.0.4",
+    "@testing-library/jest-dom": "^6.1.6",
+    "@testing-library/react": "^14.1.2",
     "@testing-library/react-hooks": "^8.0.1",
     "@types/google.maps": "^3.58.1",
     "@types/jest": "^29.5.14",
@@ -79,10 +95,7 @@
     "semver": "^7.6.3",
     "supabase": "^2.2.1",
     "supabase-cli": "^0.0.21",
-    "typescript": "^5.3.3",
-    "@testing-library/react": "^14.1.2",
-    "@testing-library/react-hooks": "^8.0.1",
-    "@testing-library/jest-dom": "^6.1.6"
+    "typescript": "^5.3.3"
   },
   "lint-staged": {
     "*.{ts,tsx}": [
