--- a/package.json
+++ b/package.json
@@ -1,113 +1,43 @@
 {
-  "name": "rate-my-employer",
+  "name": "ratemyemployer",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "concurrently \"next dev\" \"npm run track:auto\"",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "lint:fix": "next lint --fix",
     "type-check": "tsc --noEmit",
-    "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json,md}\"",
     "test": "jest",
-    "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage",
-    "clean": "rimraf .next out coverage",
-    "validate": "npm run lint && npm run type-check && npm run test",
-    "prepare": "husky install && chmod +x .husky/pre-commit",
-    "update-docs": "ts-node scripts/update-docs.ts",
-    "update-errors": "ts-node scripts/update-error-log.ts",
-    "track:start": "ts-node scripts/track-troubleshooting.ts start",
-    "track:step": "ts-node scripts/track-troubleshooting.ts step",
-    "track:end": "ts-node scripts/track-troubleshooting.ts end",
-    "track:stats": "ts-node scripts/track-troubleshooting.ts stats",
-    "track:auto": "ts-node scripts/auto-track-troubleshooting.ts",
-    "check": "ts-node scripts/system-check.ts",
-    "check:deps": "ts-node scripts/system-check.ts dependencies-check",
-    "check:types": "ts-node scripts/system-check.ts typescript-config",
-    "check:build": "ts-node scripts/system-check.ts build-performance",
-    "check:quality": "ts-node scripts/system-check.ts code-quality",
-    "check:tests": "ts-node scripts/system-check.ts test-coverage",
-    "check:memory": "ts-node scripts/system-check.ts memory-check",
-    "check:env": "ts-node scripts/system-check.ts env-check"
+    "coverage": "jest --coverage"
   },
   "dependencies": {
-    "@heroicons/react": "^2.0.18",
-    "@hookform/resolvers": "^3.9.1",
-    "@radix-ui/react-dialog": "^1.1.4",
-    "@radix-ui/react-icons": "^1.3.2",
-    "@radix-ui/react-label": "^2.1.1",
-    "@radix-ui/react-select": "^2.1.4",
-    "@radix-ui/react-slot": "^1.1.1",
-    "@supabase/ssr": "^0.5.2",
-    "@supabase/supabase-js": "^2.47.10",
-    "chalk": "^4.1.2",
-    "chokidar": "^3.5.3",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "cmdk": "^1.0.4",
-    "concurrently": "^8.2.2",
-    "date-fns": "^4.1.0",
-    "dotenv": "^16.4.7",
-    "lucide-react": "^0.469.0",
-    "next": "14.0.4",
-    "next-themes": "^0.4.4",
-    "node-fetch": "^3.3.2",
-    "postcss-nesting": "^13.0.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-hook-form": "^7.54.2",
-    "recharts": "^2.15.0",
-    "shadcn-ui": "^0.9.4",
-    "swr": "^2.3.0",
-    "tailwind-merge": "^2.6.0",
-    "tailwindcss": "^3.4.17",
-    "tailwindcss-animate": "^1.0.7",
-    "ts-node": "^10.9.2",
-    "type-coverage": "^2.27.1",
-    "zod": "^3.24.1"
+    "@headlessui/react": "^1.7.18",
+    "@heroicons/react": "^2.1.1",
+    "@supabase/ssr": "^0.1.0",
+    "@tailwindcss/forms": "^0.5.7",
+    "next": "14.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@next/bundle-analyzer": "^14.0.4",
-    "@testing-library/jest-dom": "^6.1.6",
-    "@testing-library/react": "^14.1.2",
-    "@testing-library/react-hooks": "^8.0.1",
-    "@types/google.maps": "^3.58.1",
-    "@types/jest": "^29.5.14",
-    "@types/node": "^20.10.6",
-    "@types/react": "^18.2.46",
+    "@next/bundle-analyzer": "^14.1.0",
+    "@testing-library/jest-dom": "^6.4.2",
+    "@testing-library/react": "^14.2.1",
+    "@types/jest": "^29.5.12",
+    "@types/node": "^20.11.16",
+    "@types/react": "^18.2.52",
     "@types/react-dom": "^18.2.18",
-    "@typescript-eslint/eslint-plugin": "^6.17.0",
-    "@typescript-eslint/parser": "^6.17.0",
-    "autoprefixer": "^10.4.16",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
+    "autoprefixer": "^10.4.17",
     "eslint": "^8.56.0",
-    "eslint-config-next": "^14.0.4",
-    "eslint-plugin-react": "^7.37.3",
-    "eslint-plugin-react-hooks": "^5.1.0",
-    "husky": "^9.1.7",
+    "eslint-config-next": "14.1.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "lint-staged": "^15.3.0",
-    "postcss": "^8.4.31",
-    "prettier": "^3.4.2",
-    "rimraf": "^6.0.1",
-    "semver": "^7.6.3",
-    "supabase": "^2.2.1",
-    "supabase-cli": "^0.0.21",
+    "next-router-mock": "^0.9.12",
+    "postcss": "^8.4.35",
+    "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3"
-  },
-  "lint-staged": {
-    "*.{ts,tsx}": [
-      "eslint --fix",
-      "prettier --write"
-    ],
-    "*.{js,jsx}": [
-      "eslint --fix",
-      "prettier --write"
-    ],
-    "*.{json,md}": [
-      "prettier --write"
-    ]
   }
 }
