--- a/package.json
+++ b/package.json
@@ -8,26 +8,44 @@
     "start": "next start",
     "lint": "next lint",
     "type-check": "tsc --noEmit",
-    "test": "jest",
-    "coverage": "jest --coverage"
+    "test": "jest --config jest.config.js",
+    "coverage": "jest --coverage",
+    "scan:problems": "ts-node scripts/track-current-problems.ts"
   },
   "dependencies": {
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.1",
+    "@hookform/resolvers": "^3.3.4",
+    "@radix-ui/react-label": "^2.1.1",
+    "@radix-ui/react-select": "^2.1.4",
+    "@radix-ui/react-slot": "^1.0.2",
     "@supabase/ssr": "^0.1.0",
+    "@supabase/supabase-js": "^2.47.10",
     "@tailwindcss/forms": "^0.5.7",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "dotenv": "^16.4.7",
+    "lucide-react": "^0.321.0",
     "next": "14.1.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "next-themes": "^0.4.4",
+    "punycode": "^2.3.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-hook-form": "^7.50.1",
+    "recharts": "^2.15.0",
+    "swr": "^2.2.5",
+    "tailwind-merge": "^2.2.1",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@next/bundle-analyzer": "^14.1.0",
-    "@testing-library/jest-dom": "^6.4.2",
-    "@testing-library/react": "^14.2.1",
+    "@next/bundle-analyzer": "14.1.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^14.1.2",
+    "@testing-library/react-hooks": "^7.0.2",
     "@types/jest": "^29.5.12",
     "@types/node": "^20.11.16",
-    "@types/react": "^18.2.52",
-    "@types/react-dom": "^18.2.18",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
     "autoprefixer": "^10.4.17",
@@ -37,7 +55,20 @@
     "jest-environment-jsdom": "^29.7.0",
     "next-router-mock": "^0.9.12",
     "postcss": "^8.4.35",
+    "postcss-nesting": "^13.0.1",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5.3.3"
+    "tailwindcss-animate": "^1.0.7",
+    "ts-node": "^10.9.2",
+    "typescript": "5.3.3"
+  },
+  "jest": {
+    "coverageThreshold": {
+      "global": {
+        "statements": 1,
+        "branches": 1,
+        "functions": 1,
+        "lines": 1
+      }
+    }
   }
 }
