--- a/package.json
+++ b/package.json
@@ -16,17 +16,22 @@
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.1",
     "@hookform/resolvers": "^3.3.4",
+    "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-select": "^2.1.4",
     "@radix-ui/react-slot": "^1.0.2",
-    "@supabase/ssr": "^0.1.0",
+    "@react-google-maps/api": "^2.20.5",
+    "@supabase/ssr": "^0.5.2",
     "@supabase/supabase-js": "^2.47.10",
     "@tailwindcss/forms": "^0.5.7",
+    "@types/google.maps": "^3.58.1",
+    "chalk": "^5.4.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "cmdk": "^1.0.4",
     "dotenv": "^16.4.7",
     "lucide-react": "^0.321.0",
-    "next": "14.1.0",
+    "next": "^14.2.22",
     "next-themes": "^0.4.4",
     "punycode": "^2.3.1",
     "react": "18.2.0",
@@ -56,6 +61,7 @@
     "next-router-mock": "^0.9.12",
     "postcss": "^8.4.35",
     "postcss-nesting": "^13.0.1",
+    "supabase": "^2.2.1",
     "tailwindcss": "^3.4.1",
     "tailwindcss-animate": "^1.0.7",
     "ts-node": "^10.9.2",
