--- a/package.json
+++ b/package.json
@@ -8,9 +8,13 @@
     "start": "next start",
     "lint": "next lint",
     "type-check": "tsc --noEmit",
-    "test": "jest --config jest.config.js",
-    "coverage": "jest --coverage",
-    "scan:problems": "ts-node scripts/track-current-problems.ts"
+    "test": "vitest",
+    "coverage": "vitest run --coverage",
+    "scan:problems": "ts-node scripts/track-current-problems.ts",
+    "format": "prettier --write \"**/*.{ts,tsx,md,json}\"",
+    "format:check": "prettier --check \"**/*.{ts,tsx,md,json}\"",
+    "validate": "npm run type-check && npm run lint && npm run format:check",
+    "update-types": "npx supabase gen types typescript --project-id stvmsmqnrwiifwthlppy > src/types/supabase.ts"
   },
   "dependencies": {
     "@headlessui/react": "^1.7.18",
@@ -45,19 +49,23 @@
   "devDependencies": {
     "@next/bundle-analyzer": "14.1.0",
     "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^14.1.2",
+    "@testing-library/react": "^14.3.1",
     "@testing-library/react-hooks": "^7.0.2",
+    "@testing-library/user-event": "^14.5.2",
     "@types/jest": "^29.5.12",
     "@types/node": "^20.11.16",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
+    "@vitejs/plugin-react": "^4.3.4",
+    "@vitest/coverage-v8": "^2.1.8",
     "autoprefixer": "^10.4.17",
     "eslint": "^8.56.0",
     "eslint-config-next": "14.1.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "jsdom": "^25.0.1",
     "next-router-mock": "^0.9.12",
     "postcss": "^8.4.35",
     "postcss-nesting": "^13.0.1",
@@ -65,7 +73,8 @@
     "tailwindcss": "^3.4.1",
     "tailwindcss-animate": "^1.0.7",
     "ts-node": "^10.9.2",
-    "typescript": "5.3.3"
+    "typescript": "5.3.3",
+    "vitest": "^2.1.8"
   },
   "jest": {
     "coverageThreshold": {
