--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -7,7 +7,7 @@ project_id = "stvmsmqnrwiifwthlppy"
 [api]
 enabled = true
 port = 54321
-schemas = ["public", "storage", "graphql_public"]
+schemas = ["public", "graphql_public"]
 extra_search_path = ["public", "extensions"]
 max_rows = 1000
 
@@ -41,25 +41,39 @@ file_size_limit = "50MiB"
 
 [auth]
 enabled = true
-site_url = "https://stvmsmqnrwiifwthlppy.supabase.co"
+site_url = "http://ratemyemployer.life"
 additional_redirect_urls = [
-  "http://localhost:3000",
-  "https://stvmsmqnrwiifwthlppy.supabase.co"
+  "http://localhost:3000/auth/callback",
+  "http://localhost:3001/auth/callback",
+  "http://ratemyemployer.life"
 ]
 jwt_expiry = 3600
-enable_signup = true
+enable_refresh_token_rotation = true
+refresh_token_reuse_interval = 10
+
+[auth.mfa]
+max_enrolled_factors = 10
+
+[auth.mfa.totp]
+enroll_enabled = true
+verify_enabled = true
+
+[auth.mfa.phone]
+enroll_enabled = false
+verify_enabled = false
 
 [auth.email]
 enable_signup = true
-double_confirm_changes = false
-enable_confirmations = false
+double_confirm_changes = true
+enable_confirmations = true
+secure_password_change = false
+max_frequency = "1m0s"
+otp_length = 6
+otp_expiry = 86400
 
-[auth.sms]
-enable_signup = false
-enable_confirmations = false
-
-[auth.external]
-enabled = false
+[auth.email.template]
+[auth.email.template.confirmation]
+content_path = ""
 
 [auth.external.github]
 enabled = false
