feat: add E2E testing with Playwright

--- a/package.json
+++ b/package.json
@@ -16,7 +16,11 @@
     "validate": "npm run type-check && npm run lint && npm run format:check",
     "update-types": "npx supabase gen types typescript --project-id stvmsmqnrwiifwthlppy > src/types/supabase.ts",
     "verify": "ts-node scripts/verify-build.ts",
-    "verify:ci": "cross-env CI=true ts-node scripts/verify-build.ts"
+    "verify:ci": "cross-env CI=true ts-node scripts/verify-build.ts",
+    "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui",
+    "test:e2e:debug": "playwright test --debug",
+    "test:e2e:report": "playwright show-report"
   },
   "dependencies": {
     "@headlessui/react": "^1.7.18",
@@ -50,6 +54,7 @@
   },
   "devDependencies": {
     "@next/bundle-analyzer": "14.1.0",
+    "@playwright/test": "^1.49.1",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^14.3.1",
     "@testing-library/react-hooks": "^7.0.2",
@@ -63,6 +68,7 @@
     "@vitejs/plugin-react": "^4.3.4",
     "@vitest/coverage-v8": "^2.1.8",
     "autoprefixer": "^10.4.17",
+    "cross-env": "^7.0.3",
     "eslint": "^8.56.0",
     "eslint-config-next": "14.1.0",
     "jest": "^29.7.0",
@@ -76,8 +82,7 @@
     "tailwindcss-animate": "^1.0.7",
     "ts-node": "^10.9.2",
     "typescript": "5.3.3",
-    "vitest": "^2.1.8",
-    "cross-env": "^7.0.3"
+    "vitest": "^2.1.8"
   },
   "jest": {
     "coverageThreshold": {
