--- a/.github/workflows/build-verify.yml
+++ b/.github/workflows/build-verify.yml
@@ -22,12 +22,17 @@ jobs:
       - name: Install dependencies
         run: npm ci
         
+      - name: Install Playwright browsers
+        run: npx playwright install --with-deps
+        
       - name: Run build verification
         run: npm run verify
         env:
           NEXT_PUBLIC_SUPABASE_URL: ${{ secrets.NEXT_PUBLIC_SUPABASE_URL }}
           NEXT_PUBLIC_SUPABASE_ANON_KEY: ${{ secrets.NEXT_PUBLIC_SUPABASE_ANON_KEY }}
           SUPABASE_SERVICE_ROLE_KEY: ${{ secrets.SUPABASE_SERVICE_ROLE_KEY }}
+          TEST_USER_EMAIL: ${{ secrets.TEST_USER_EMAIL }}
+          TEST_USER_PASSWORD: ${{ secrets.TEST_USER_PASSWORD }}
           
       - name: Upload verification report
         if: always()
@@ -35,6 +40,13 @@ jobs:
         with:
           name: build-verification-report
           path: reports/build-verification.json
+          
+      - name: Upload Playwright report
+        if: always()
+        uses: actions/upload-artifact@v3
+        with:
+          name: playwright-report
+          path: playwright-report/
           
       - name: Check verification status
         if: failure()
