--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "type-check": "tsc --noEmit",
     "test": "vitest",
     "coverage": "vitest run --coverage",
-    "scan:problems": "ts-node scripts/track-current-problems.ts",
     "format": "prettier --write \"**/*.{ts,tsx,md,json}\"",
     "format:check": "prettier --check \"**/*.{ts,tsx,md,json}\"",
     "validate": "npm run type-check && npm run lint && npm run format:check",
@@ -20,7 +19,10 @@
     "test:e2e": "playwright test",
     "test:e2e:ui": "playwright test --ui",
     "test:e2e:debug": "playwright test --debug",
-    "test:e2e:report": "playwright show-report"
+    "test:e2e:report": "playwright show-report",
+    "test:setup": "tsx scripts/test/setup.ts",
+    "test:fix": "tsx scripts/test/fix.ts",
+    "test:all": "npm run test:setup && npm run test:fix && npm run test"
   },
   "dependencies": {
     "@headlessui/react": "^1.7.18",
@@ -35,6 +37,8 @@
     "@supabase/supabase-js": "^2.47.10",
     "@tailwindcss/forms": "^0.5.7",
     "@types/google.maps": "^3.58.1",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
     "chalk": "^5.4.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
@@ -50,19 +54,15 @@
     "recharts": "^2.15.0",
     "swr": "^2.2.5",
     "tailwind-merge": "^2.2.1",
-    "zod": "^3.22.4",
-    "@types/react": "^18.2.0",
-    "@types/react-dom": "^18.2.0"
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@next/bundle-analyzer": "14.1.0",
     "@playwright/test": "^1.49.1",
     "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^14.0.0",
-    "@testing-library/react-hooks": "^8.0.1",
+    "@testing-library/react": "^14.3.1",
     "@testing-library/user-event": "^14.5.2",
-    "@types/jest": "^29.5.12",
-    "@types/node": "^20.11.16",
+    "@types/node": "^20.17.11",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
     "@vitejs/plugin-react": "^4.3.4",
@@ -71,9 +71,9 @@
     "cross-env": "^7.0.3",
     "eslint": "^8.56.0",
     "eslint-config-next": "14.1.0",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
+    "glob": "^11.0.0",
     "jsdom": "^25.0.1",
+    "msw": "^2.7.0",
     "next-router-mock": "^0.9.12",
     "postcss": "^8.4.35",
     "postcss-nesting": "^13.0.1",
@@ -81,17 +81,8 @@
     "tailwindcss": "^3.4.1",
     "tailwindcss-animate": "^1.0.7",
     "ts-node": "^10.9.2",
+    "tsx": "^4.19.2",
     "typescript": "5.3.3",
     "vitest": "^2.1.8"
-  },
-  "jest": {
-    "coverageThreshold": {
-      "global": {
-        "statements": 1,
-        "branches": 1,
-        "functions": 1,
-        "lines": 1
-      }
-    }
   }
 }
