refactor: consolidate scripts into unified CLI tool

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "format:check": "prettier --check \"**/*.{ts,tsx,md,json}\"",
     "validate": "npm run type-check && npm run lint && npm run format:check",
     "update-types": "npx supabase gen types typescript --project-id stvmsmqnrwiifwthlppy > src/types/supabase.ts",
+    "cli": "node --loader ts-node/esm scripts/cli.ts",
     "verify": "node --loader ts-node/esm scripts/verify-build.ts",
     "verify:ci": "cross-env CI=true node --loader ts-node/esm scripts/verify-build.ts",
     "test:e2e": "playwright test",
