--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.50.1",
+    "react-hot-toast": "^2.5.1",
     "recharts": "^2.15.0",
     "swr": "^2.2.5",
     "tailwind-merge": "^2.2.1",
