--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "clsx": "^2.1.0",
     "cmdk": "^1.0.4",
     "dotenv": "^16.4.7",
+    "framer-motion": "^11.16.4",
     "lucide-react": "^0.321.0",
     "next": "^14.2.22",
     "next-themes": "^0.4.4",
