fix: add route config and rewrites for /shame page

--- a/vercel.json
+++ b/vercel.json
@@ -4,5 +4,9 @@
   "devCommand": "next dev",
   "installCommand": "npm install",
   "framework": "nextjs",
-  "outputDirectory": ".next"
+  "outputDirectory": ".next",
+  "rewrites": [
+    { "source": "/shame", "destination": "/shame" },
+    { "source": "/shame/(.*)", "destination": "/shame/$1" }
+  ]
 } 
