--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@heroicons/react": "^2.1.1",
     "@hookform/resolvers": "^3.3.4",
     "@radix-ui/react-dialog": "^1.1.4",
+    "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-select": "^2.1.4",
     "@radix-ui/react-slider": "^1.2.2",
@@ -53,7 +54,7 @@
     "axios": "^1.7.9",
     "cheerio": "^1.0.0",
     "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.0",
+    "clsx": "^2.1.1",
     "cmdk": "^1.0.4",
     "firebase": "^11.1.0",
     "framer-motion": "^11.16.4",
@@ -66,8 +67,9 @@
     "react-hook-form": "^7.50.1",
     "react-hot-toast": "^2.5.1",
     "recharts": "^2.15.0",
+    "shadcn-ui": "^0.9.4",
     "swr": "^2.2.5",
-    "tailwind-merge": "^2.2.1",
+    "tailwind-merge": "^2.6.0",
     "zod": "^3.24.1"
   },
   "devDependencies": {
