Update project structure and dependencies: Move to src/app, add not-found page, update Next.js config

--- a/package.json
+++ b/package.json
@@ -18,6 +18,14 @@
     "format:check": "prettier --check \"**/*.{ts,tsx,md,json}\"",
     "validate": "npm run type-check && npm run lint && npm run format:check",
     "update-types": "npx supabase gen types typescript --project-id stvmsmqnrwiifwthlppy > src/types/supabase.ts",
+    "supabase:start": "supabase start",
+    "supabase:stop": "supabase stop",
+    "supabase:status": "supabase status",
+    "supabase:db:reset": "supabase db reset",
+    "supabase:db:push": "supabase db push",
+    "supabase:db:pull": "supabase db pull",
+    "supabase:migration:new": "supabase migration new",
+    "supabase:migration:up": "supabase migration up",
     "cli": "cross-env NODE_OPTIONS=\"--import tsx\" node scripts/cli.ts",
     "verify": "cross-env NODE_OPTIONS=\"--import tsx\" node scripts/verify-build.ts",
     "verify:ci": "cross-env CI=true NODE_OPTIONS=\"--import tsx\" node scripts/verify-build.ts",
@@ -43,10 +51,10 @@
     "@radix-ui/react-select": "^2.1.4",
     "@radix-ui/react-slider": "^1.2.2",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toast": "^1.2.5",
     "@react-google-maps/api": "^2.20.5",
-    "@supabase/auth-helpers-nextjs": "^0.10.0",
-    "@supabase/ssr": "^0.5.2",
-    "@supabase/supabase-js": "^2.47.16",
+    "@supabase/ssr": "^0.1.0",
+    "@supabase/supabase-js": "^3.0.0",
     "@t3-oss/env-nextjs": "^0.11.1",
     "@tailwindcss/forms": "^0.5.7",
     "@types/google.maps": "^3.58.1",
@@ -54,24 +62,26 @@
     "@types/react-dom": "^18.2.19",
     "axios": "^1.7.9",
     "cheerio": "^1.0.0",
-    "class-variance-authority": "^0.7.0",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.4",
     "firebase": "^11.1.0",
     "framer-motion": "^11.16.4",
     "lucide-react": "^0.321.0",
-    "next": "15.1.5",
+    "next": "^15.1.5",
     "next-themes": "^0.4.4",
     "punycode": "^2.3.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-firebase-hooks": "^5.1.1",
     "react-hook-form": "^7.50.1",
     "react-hot-toast": "^2.5.1",
     "recharts": "^2.15.0",
     "shadcn-ui": "^0.9.4",
+    "sonner": "^1.7.2",
     "swr": "^2.2.5",
     "tailwind-merge": "^2.6.0",
-    "zod": "^3.24.1"
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@next/bundle-analyzer": "15.1.5",
@@ -81,7 +91,7 @@
     "@testing-library/user-event": "^14.5.2",
     "@types/cheerio": "^0.22.35",
     "@types/firebase": "^2.4.32",
-    "@types/glob": "^8.1.0",
+    "@types/glob": "^10.3.3",
     "@types/node": "^20.17.14",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
@@ -92,9 +102,9 @@
     "commander": "^13.0.0",
     "cross-env": "^7.0.3",
     "dotenv": "^16.4.7",
-    "eslint": "^8.57.1",
+    "eslint": "^8.56.0",
     "eslint-config-next": "15.1.5",
-    "glob": "^11.0.1",
+    "glob": "^10.3.3",
     "jsdom": "^25.0.1",
     "msw": "^2.7.0",
     "next-router-mock": "^0.9.12",
@@ -106,7 +116,8 @@
     "ts-node": "^10.9.2",
     "tsx": "^4.19.2",
     "typescript": "^5.7.3",
-    "vitest": "^2.1.8"
+    "vitest": "^2.1.8",
+    "rimraf": "^5.0.5"
   },
   "resolutions": {
     "@types/react": "^18.2.55",
