--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,5 +28,9 @@
     "experimentalSpecifierResolution": "node"
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
-  "exclude": ["node_modules"]
+  "exclude": [
+    "temp",
+    ".next",
+    "node_modules"
+  ]
 }
