refactor: improve review submission and company listing
- Replace standalone review page with modal dialog

- Fix company listing and filtering functionality

- Update company cards to handle data properly

- Remove unused files and clean up codebase

- Fix data fetching and error handling in CompanyList

- Add proper rating calculations from reviews

--- a/package.json
+++ b/package.json
@@ -2,129 +2,58 @@
   "name": "ratemyemployer",
   "version": "1.0.0",
   "private": true,
-  "type": "module",
-  "engines": {
-    "node": ">=18.17.0"
-  },
+  "type": "commonjs",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "type-check": "tsc --noEmit",
-    "test": "vitest",
-    "coverage": "jest --coverage",
-    "format": "prettier --write \"**/*.{ts,tsx,md,json}\"",
-    "format:check": "prettier --check \"**/*.{ts,tsx,md,json}\"",
-    "validate": "npm run type-check && npm run lint && npm run format:check",
-    "update-types": "npx supabase gen types typescript --project-id stvmsmqnrwiifwthlppy > src/types/supabase.ts",
-    "supabase:start": "supabase start",
-    "supabase:stop": "supabase stop",
-    "supabase:status": "supabase status",
-    "supabase:db:reset": "supabase db reset",
-    "supabase:db:push": "supabase db push",
-    "supabase:db:pull": "supabase db pull",
-    "supabase:migration:new": "supabase migration new",
-    "supabase:migration:up": "supabase migration up",
-    "cli": "cross-env NODE_OPTIONS=\"--import tsx\" node scripts/cli.ts",
-    "verify": "cross-env NODE_OPTIONS=\"--import tsx\" node scripts/verify-build.ts",
-    "verify:ci": "cross-env CI=true NODE_OPTIONS=\"--import tsx\" node scripts/verify-build.ts",
-    "test:e2e": "playwright test",
-    "test:e2e:ui": "playwright test --ui",
-    "test:e2e:debug": "playwright test --debug",
-    "test:e2e:report": "playwright show-report",
-    "test:setup": "cross-env NODE_OPTIONS=\"--import tsx\" node scripts/test/setup.ts",
-    "test:fix": "cross-env NODE_OPTIONS=\"--import tsx\" node scripts/test/fix.ts",
-    "test:all": "npm run test:setup && npm run test:fix && npm run test",
-    "fix:use-client": "cross-env NODE_OPTIONS=\"--import tsx\" node scripts/fix-use-client.ts"
+    "lint": "next lint"
   },
   "dependencies": {
-    "@firebase/app-types": "^0.9.3",
-    "@firebase/auth": "^1.8.1",
-    "@google/generative-ai": "^0.21.0",
-    "@headlessui/react": "^1.7.18",
-    "@heroicons/react": "^2.1.1",
-    "@hookform/resolvers": "^3.3.4",
-    "@radix-ui/react-dialog": "^1.1.4",
+    "@heroicons/react": "^2.2.0",
+    "@hookform/resolvers": "^3.10.0",
     "@radix-ui/react-icons": "^1.3.2",
-    "@radix-ui/react-label": "^2.1.1",
-    "@radix-ui/react-select": "^2.1.4",
-    "@radix-ui/react-slider": "^1.2.2",
-    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-select": "^2.1.5",
+    "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-toast": "^1.2.5",
     "@react-google-maps/api": "^2.20.5",
-    "@supabase/ssr": "^0.1.0",
-    "@supabase/supabase-js": "^3.0.0",
-    "@t3-oss/env-nextjs": "^0.11.1",
-    "@tailwindcss/forms": "^0.5.7",
-    "@types/google.maps": "^3.58.1",
-    "@types/react": "^18.2.55",
-    "@types/react-dom": "^18.2.19",
+    "@supabase/auth-helpers-nextjs": "^0.10.0",
+    "@supabase/ssr": "^0.5.2",
+    "@supabase/supabase-js": "^2.48.1",
     "axios": "^1.7.9",
-    "cheerio": "^1.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "cmdk": "^1.0.4",
-    "firebase": "^11.1.0",
-    "framer-motion": "^11.16.4",
-    "lucide-react": "^0.321.0",
-    "next": "^15.1.5",
+    "framer-motion": "^12.0.6",
+    "lucide-react": "^0.474.0",
+    "next": "^15.1.6",
     "next-themes": "^0.4.4",
-    "punycode": "^2.3.1",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-firebase-hooks": "^5.1.1",
-    "react-hook-form": "^7.50.1",
-    "react-hot-toast": "^2.5.1",
-    "recharts": "^2.15.0",
-    "shadcn-ui": "^0.9.4",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-hook-form": "^7.54.2",
+    "react-icons": "^5.4.0",
     "sonner": "^1.7.2",
-    "swr": "^2.2.5",
     "tailwind-merge": "^2.6.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@next/bundle-analyzer": "15.1.5",
-    "@playwright/test": "^1.49.1",
-    "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^14.3.1",
-    "@testing-library/user-event": "^14.5.2",
-    "@types/cheerio": "^0.22.35",
-    "@types/firebase": "^2.4.32",
-    "@types/glob": "^10.3.3",
-    "@types/node": "^20.17.14",
-    "@typescript-eslint/eslint-plugin": "^6.21.0",
-    "@typescript-eslint/parser": "^6.21.0",
-    "@vitejs/plugin-react": "^4.3.4",
-    "@vitest/coverage-v8": "^2.1.8",
+    "@eslint/js": "^9.19.0",
+    "@next/bundle-analyzer": "^14.1.0",
+    "@next/eslint-plugin-next": "^15.1.6",
+    "@types/node": "^20.11.5",
+    "@types/react": "^18.2.48",
+    "@types/react-dom": "^18.2.18",
+    "@typescript-eslint/eslint-plugin": "^8.21.0",
+    "@typescript-eslint/parser": "^8.21.0",
     "autoprefixer": "^10.4.17",
-    "chalk": "^5.4.1",
-    "commander": "^13.0.0",
-    "cross-env": "^7.0.3",
-    "dotenv": "^16.4.7",
     "eslint": "^8.56.0",
-    "eslint-config-next": "15.1.5",
-    "glob": "^10.3.3",
-    "jsdom": "^25.0.1",
-    "msw": "^2.7.0",
-    "next-router-mock": "^0.9.12",
-    "postcss": "^8.4.35",
+    "eslint-config-next": "14.1.0",
+    "eslint-plugin-react": "^7.37.4",
+    "eslint-plugin-react-hooks": "^5.1.0",
+    "postcss": "^8.4.33",
+    "postcss-import": "^16.1.0",
     "postcss-nesting": "^13.0.1",
-    "supabase": "^2.2.1",
     "tailwindcss": "^3.4.1",
     "tailwindcss-animate": "^1.0.7",
-    "ts-node": "^10.9.2",
-    "tsx": "^4.19.2",
-    "typescript": "^5.7.3",
-    "vitest": "^2.1.8",
-    "rimraf": "^5.0.5"
-  },
-  "resolutions": {
-    "@types/react": "^18.2.55",
-    "@types/react-dom": "^18.2.19"
-  },
-  "overrides": {
-    "@types/react": "^18.2.55",
-    "@types/react-dom": "^18.2.19"
+    "typescript": "^5.3.3"
   }
 }
