--- a/.env.example
+++ b/.env.example
@@ -20,3 +20,6 @@ NEXT_PUBLIC_MAINTENANCE_MODE=false
 # Rate Limiting
 RATE_LIMIT_REQUESTS=100
 RATE_LIMIT_WINDOW_MS=900000 # 15 minutes 
+
+# Other configurations
+NODE_ENV=development 
