--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest"
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
@@ -28,6 +29,7 @@
     "lucide-react": "^0.474.0",
     "next": "^15.1.6",
     "next-themes": "^0.4.4",
+    "openai": "^4.80.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.54.2",
@@ -42,7 +44,8 @@
     "@next/bundle-analyzer": "^14.1.0",
     "@next/eslint-plugin-next": "^15.1.6",
     "@playwright/test": "^1.50.0",
-    "@types/node": "^20.11.5",
+    "@types/jest": "^29.5.14",
+    "@types/node": "^20.17.16",
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
     "@typescript-eslint/eslint-plugin": "^8.21.0",
@@ -54,11 +57,14 @@
     "eslint-config-next": "14.1.0",
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.1.0",
+    "jest": "^29.7.0",
     "postcss": "^8.4.33",
     "postcss-import": "^16.1.0",
     "postcss-nesting": "^13.0.1",
     "tailwindcss": "^3.4.1",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "^5.3.3"
+    "ts-jest": "^29.2.5",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.7.3"
   }
 }
