chore: update project progress and review system enhancements

--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "start": "next start",
     "lint": "next lint",
     "test": "jest",
+    "verify:database": "tsx scripts/verify-database.ts",
     "verify:supabase": "tsx scripts/verify-supabase-data.ts",
     "test:form-validation": "tsx scripts/test-form-validation.ts",
     "test:form-submissions": "tsx scripts/test-form-submissions.ts",
     "monitor:submissions": "tsx scripts/monitor-form-submissions.ts",
-    "verify:all": "npm run verify:supabase && npm run test:form-validation && npm run test:form-submissions",
+    "verify:all": "npm run verify:database && npm run verify:supabase && npm run test:form-validation && npm run test:form-submissions",
     "mcp:setup": "tsx scripts/setup-mcp.ts",
     "mcp:start": "cursor mcp start supabase",
     "mcp:sample-queries": "tsx scripts/mcp-sample-queries.ts",
@@ -45,6 +46,7 @@
     "@radix-ui/react-switch": "^1.1.3",
     "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-toast": "^1.2.5",
+    "@radix-ui/react-tooltip": "^1.1.8",
     "@react-google-maps/api": "^2.20.5",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/ssr": "^0.5.2",
@@ -76,13 +78,17 @@
     "@next/bundle-analyzer": "^14.1.0",
     "@next/eslint-plugin-next": "^15.1.6",
     "@playwright/test": "^1.50.0",
-    "@types/jest": "^29.5.14",
+    "@testing-library/jest-dom": "^6.4.2",
+    "@testing-library/react": "^14.2.1",
+    "@testing-library/user-event": "^14.5.2",
+    "@types/jest": "^29.5.12",
     "@types/node": "^20.17.16",
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
     "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^8.21.0",
     "@typescript-eslint/parser": "^8.21.0",
+    "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.17",
     "chalk": "^5.4.1",
     "date-fns": "^3.6.0",
@@ -91,17 +97,20 @@
     "eslint-config-next": "14.1.0",
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.1.0",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8.4.33",
     "postcss-import": "^16.1.0",
     "postcss-nesting": "^13.0.1",
     "tailwindcss": "^3.4.1",
     "tailwindcss-animate": "^1.0.7",
-    "ts-jest": "^29.2.5",
+    "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "tsx": "^4.19.3",
     "typescript": "^5.7.3",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "vitest": "^3.0.9"
   }
 }
