--- a/.env.example
+++ b/.env.example
@@ -2,12 +2,20 @@
 NEXT_PUBLIC_SUPABASE_URL=your-project-url
 NEXT_PUBLIC_SUPABASE_ANON_KEY=your-anon-key
 SUPABASE_SERVICE_ROLE_KEY=your-service-role-key
+SUPABASE_GEN_TYPES_COMMAND=npx supabase gen types typescript --project-id "your-project-id" > src/types/supabase.ts
+
+# Database Configuration
+DATABASE_URL="postgresql://postgres:your-password@db.your-project-id.supabase.co:5432/postgres"
 
 # Next.js Configuration
 NEXT_PUBLIC_SITE_URL=http://localhost:3000
 
 # Google Maps API (for location autocomplete)
 NEXT_PUBLIC_GOOGLE_MAPS_API_KEY=your-google-maps-api-key
+
+# GNews and NewsAPI
+GNEWS_API_KEY=your-gnews-api-key
+NEWS_API_KEY=your-newsapi-key
 
 # Analytics (optional)
 NEXT_PUBLIC_GA_TRACKING_ID=your-ga-tracking-id
