--- a/.env.example
+++ b/.env.example
@@ -12,6 +12,9 @@ NEXT_PUBLIC_GOOGLE_MAPS_API_KEY=your-google-maps-api-key
 # Analytics (optional)
 NEXT_PUBLIC_GA_TRACKING_ID=your-ga-tracking-id
 
+# News (optional)
+SERP_API_KEY=your-serp-api-key
+
 # Feature Flags
 NEXT_PUBLIC_ENABLE_ANALYTICS=false
 NEXT_PUBLIC_ENABLE_MAPS=true
