--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "scraping:demo": "tsx scripts/run-web-scraping.ts --demo",
     "scraping:monitor": "tsx scripts/run-web-scraping.ts --monitor",
     "scraping:validate": "tsx scripts/run-web-scraping.ts --validate",
+    "ingest:rss": "tsx scripts/rss_ingest.ts",
     "mcp:setup-procedures": "tsx scripts/setup-stored-procedures.ts",
     "mcp:runner": "node scripts/run-mcp-server.js",
     "mcp:fix-database": "tsx scripts/mcp-database-fixes.ts",
@@ -81,7 +82,9 @@
     "recharts": "^2.15.1",
     "sonner": "^1.7.2",
     "tailwind-merge": "^2.6.0",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "dotenv": "^16.4.7",
+    "rss-parser": "^3.13.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
@@ -102,7 +105,6 @@
     "autoprefixer": "^10.4.17",
     "chalk": "^5.4.1",
     "date-fns": "^3.6.0",
-    "dotenv": "^16.4.7",
     "eslint": "^8.56.0",
     "eslint-config-next": "14.1.0",
     "eslint-plugin-react": "^7.37.4",
